[tool.poetry]
name = "nasse"
version = "2.0.2"
description = "A web server framework written on top of Flask which lets you focus on your ideas 🍡"
license = "MIT"
authors = ["Animenosekai <animenosekai.mail@gmail.com>"]
maintainers = ["Animenosekai <animenosekai.mail@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Animenosekai/nasse"
documentation = "https://github.com/Animenosekai/nasse/blob/main/README.md"
keywords = [
    "animenosekai",
    "nasse",
    "flask",
    "framework",
    "web",
    "web-server",
    "web-framework",
    "docs",
    "documentation",
    "http",
    "requests",
]
classifiers = [
    # Status
    "Development Status :: 5 - Production/Stable",

    # Environment
    "Environment :: Web Environment",
    "Environment :: Console",

    # Framework
    "Framework :: Flask",

    # Audience
    "Intended Audience :: Developers",

    # Licensing
    "License :: OSI Approved :: MIT License",

    # Software Requirements
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",

    # Topics
    "Topic :: Documentation",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",

    # Code quality
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2"
nh3 = "^0.2.14"
flask-compress = "^1.10"
watchdog = "^3.0.0"
rich = "^13"
requests = "^2"
miko = "^1.1"
textual = "^0.30.0"

[tool.poetry.scripts]
nasse = 'nasse.__main__:entry'

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Animenosekai/nasse/issues"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
